// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use this skill to work with Microsoft Foundry (Azure AI Foundry): deploy AI models from catalog, build RAG applications with knowledge indexes, create and evaluate AI agents.
USE FOR: Microsoft Foundry, AI Foundry, deploy model, model catalog, RAG, knowledge index, create agent, evaluate agent, agent monitoring, create Foundry project, new Foundry project, set up Foundry, onboard to Foundry, provision Foundry infrastructure.
DO NOT USE FOR: Azure Functions (use azure-functions), App Service (use azure-create-app), generic Azure resource creation (use azure-create-app).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "applications",
    "authentication",
    "azure",
    "azure-create-app",
    "azure-functions",
    "build",
    "catalog",
    "cli",
    "create",
    "creation",
    "deploy",
    "diagnostic",
    "evaluate",
    "foundry",
    "from",
    "function",
    "functions",
    "generic",
    "identity",
    "index",
    "indexes",
    "infrastructure",
    "knowledge",
    "mcp",
    "microsoft",
    "model",
    "models",
    "monitor",
    "monitoring",
    "onboard",
    "project",
    "provision",
    "rbac",
    "resource",
    "service",
    "skill",
    "this",
    "with",
    "work",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`microsoft-foundry - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "applications",
  "authentication",
  "azure",
  "azure-create-app",
  "azure-functions",
  "build",
  "catalog",
  "cli",
  "create",
  "creation",
  "deploy",
  "diagnostic",
  "evaluate",
  "foundry",
  "from",
  "function",
  "functions",
  "generic",
  "identity",
  "index",
  "indexes",
  "infrastructure",
  "knowledge",
  "mcp",
  "microsoft",
  "model",
  "models",
  "monitor",
  "monitoring",
  "onboard",
  "project",
  "provision",
  "rbac",
  "resource",
  "service",
  "skill",
  "this",
  "with",
  "work",
]
`;
